--- a/hugo.yaml
+++ b/hugo.yaml
@@ -8,12 +8,8 @@ params:
   homeInfoParams:
     Title: "Olá!"
     Content: >-
-    
-      Você pode me chamar de CLL,
-      * Self-taught | 
-      * Machine Learning Competitor | 
-      * Technician in Computer Science
-      
+      Você pode me chamar de CLL
+      Self-taught | Machine Learning Competitor | Technician in Computer Science
   socialIcons:
     - name: Github 
       url: https://github.com/CllsPy
