--- a/hugo.yaml
+++ b/hugo.yaml
@@ -9,7 +9,7 @@ params:
     Title: "Olá, meu nome é Carlos!"
     Content: >-    
       Self-taught | Machine Learning Competitor | Technician in Computer Science
-      ImagePath: "/static/assets/Avatar-Maker.png"
+      ImagePath: /static/assets/Avatar-Maker.png
   socialIcons:
     - name: Github 
       url: https://github.com/CllsPy
