--- a/hugo.yaml
+++ b/hugo.yaml
@@ -12,6 +12,11 @@ params:
   socialIcons:
     - name: Github 
       url: https://github.com/CllsPy
+      
+  label:
+    text: "Chanin Nantasenamat"
+    icon: "static/images/Avatar-Maker.png"
+    iconHeight: 35
 
 menu:
   main:
