--- a/hugo.yaml
+++ b/hugo.yaml
@@ -13,6 +13,7 @@ params:
     - name: Github 
       url: https://github.com/CllsPy
 
+profileMode:
   imageUrl: "static/images/Avatar-Maker.png"
   imageWidth: 120
   imageHeight: 120
